third_party/move/move-compiler-v2/tests/checking/naming/global_builtin_many_type_arguments.exp

Diagnostics:
error: expected 1 type argument but 2 were provided
  ┌─ tests/checking/naming/global_builtin_many_type_arguments.move:8:9
  │
8 │         borrow_global<R1, R2>(@0x1);
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 type argument but 3 were provided
  ┌─ tests/checking/naming/global_builtin_many_type_arguments.move:9:9
  │
9 │         exists<R1, R2, R3>(@0x1);
  │         ^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 type argument but 4 were provided
   ┌─ tests/checking/naming/global_builtin_many_type_arguments.move:10:17
   │
10 │         R1 {} = move_from<R1, R2, R3, R4>(@0x1);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 type argument but 5 were provided
   ┌─ tests/checking/naming/global_builtin_many_type_arguments.move:11:9
   │
11 │         move_to<R1, R2, R3, R4, R5>(account, R1{});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
